--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         </nav>
         <ul class="header-list list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="header-mail link click"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="header-mail link click"><svg class="item-icon" width="16" height="12">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg> info@devstudio.com </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="header-tel link click">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-tel link click"><svg class="item-icon" width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -49,29 +51,49 @@
           <button type="button" class="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="advatages">
+      <section class="advantages">
         <div class="container adv-content">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-list list">
             <li class="advantages-item">
+              <a href="" class="advantages-img">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </a>
               <h3 class="advantages-title">Увага до деталей</h3>
               <p class="advantages-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="advantages-item">
+              <a href="" class="advantages-img">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </a>
               <h3 class="advantages-title">Пунктуальність</h3>
               <p class="advantages-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="advantages-item">
+              <a href="" class="advantages-img">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </a>
               <h3 class="advantages-title">Планування</h3>
               <p class="advantages-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="advantages-item">
+              <a href="" class="advantages-img">
+                <svg class="advantages-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </a>
               <h3 class="advantages-title">Сучасні технології</h3>
               <p class="advantages-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -126,8 +148,40 @@
                 width="270"
                 height="260"
               />
-              <h3 class="member">Ігор Дем'яненко</h3>
+              <div class="team-content">
+                <h3 class="member">Ігор Дем'яненко</h3>
               <p lang="en" class="member-job">Product Designer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -137,8 +191,40 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="member">Ольга Рєпіна</h3>
               <p lang="en" class="member-job">Frontend Developer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
             </li>
             <li class="team-item">
               <img
@@ -148,8 +234,40 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="member">Микола Тарасов</h3>
               <p lang="en" class="member-job">Marketing</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
             </li>
             <li class="team-item">
               <img
@@ -159,8 +277,40 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="member">Михайло Єрмаков</h3>
               <p lang="en" class="member-job">UI Designer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="link-social link">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
             </li>
           </ul>
         </div>
@@ -192,3 +342,5 @@
     </footer>
   </body>
 </html>
+
+
