--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,8 @@
     <header class="header">
       <div class="container header-context">
         <nav class="header-nav">
+          <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
           <ul class="header-nav list">
-            <li class="nav-item">
-              <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
-            </li>
             <li class="nav-item"><a href="./index.html" class="link click">Студія</a></li>
             <li class="nav-item"><a href="" class="link current click">Портфоліо</a></li>
             <li class="nav-item"><a href="" class="link click">Контакти</a></li>
@@ -32,10 +30,14 @@
         </nav>
         <ul class="header-list list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="header-mail link click"><svg class="item-icon" width="16" height="12">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg> info@devstudio.com </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-tel link click"><svg class="item-icon" width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -63,8 +65,10 @@
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/technokriak.jpg" alt="веб-сайт" width="370" height="294" />
-                <h2 class="project-title">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-description">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
@@ -75,8 +79,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 lang="en" class="project-title">Постер New Orlean vs Golden Star</h2>
-                <p class="project-type">Дизайн</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
@@ -87,22 +93,28 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="project-title">Ресторан Seafood</h2>
-                <p class="project-type">Додаток</p>
+                <div class="project-description">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/prime.jpg" alt="навушники" width="370" height="294" />
-                <h2 lang="en" class="project-title">Проєкт Prime</h2>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Проєкт Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/boxes.jpg" alt="коробки" width="370" height="294" />
-                <h2 lang="en" class="project-title">Проєкт Boxes</h2>
-                <p class="project-type">Додаток</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Проєкт Boxes</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
@@ -113,8 +125,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
@@ -125,22 +139,28 @@
                   width="370"
                   height="294"
                 />
-                <h2 lang="en" class="project-title">Видання Limited Edition</h2>
-                <p class="project-type">Дизайн</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Видання Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/lab.jpg" alt="етикетка" width="370" height="294" />
-                <h2 class="project-title">Проект LAB</h2>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-description">
+                  <h2 class="project-title">Проект LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/growing-bussines.jpg" alt="ноутбук" width="370" height="294" />
-                <h2 lang="en" class="project-title">Growing Business</h2>
-                <p class="project-type">Додаток</p>
+                <div class="project-description">
+                  <h2 lang="en" class="project-title">Growing Business</h2>
+                  <p class="project-type">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
