added shadow and effects

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,20 @@
         </nav>
         <ul class="header-list list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="header-mail link click"><svg class="item-icon" width="16" height="12">
-              <use href="./images/symbol-defs.svg#icon-envelope"></use>
-            </svg> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="header-mail link click"
+              ><svg class="item-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="header-tel link click"><svg class="item-icon" width="10" height="16">
-              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-            </svg> +38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-tel link click"
+              ><svg class="item-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -85,6 +91,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img
@@ -99,6 +106,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/prime.jpg" alt="навушники" width="370" height="294" />
@@ -108,6 +116,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/boxes.jpg" alt="коробки" width="370" height="294" />
@@ -117,6 +126,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img
@@ -131,6 +141,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img
@@ -145,6 +156,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/lab.jpg" alt="етикетка" width="370" height="294" />
@@ -154,6 +166,7 @@
                 </div>
               </a>
             </li>
+
             <li class="project-item">
               <a class="project-link link" href="">
                 <img src="./images/growing-bussines.jpg" alt="ноутбук" width="370" height="294" />
@@ -169,26 +182,61 @@
     </main>
     <footer>
       <div class="container footer-context">
-        <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
-        <address class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                href="https://goo.gl/maps/ePNzgXtJ5XjrzMhz8"
-                class="address-link link"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="our-address">
+          <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a
+                  href="https://goo.gl/maps/ePNzgXtJ5XjrzMhz8"
+                  class="address-link link"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-mail link" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="address-item">
+                <a class="address-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="our-contacts">
+          <p class="our-contacts-title">приєднуйтесь</p>
+          <ul class="our-contacts-social list">
+            <li class="our-contacts-social-item">
+              <a href="" class="our-contacts-link-social link">
+                <svg class="our-contacts-icon-social" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-mail link" href="mailto:info@example.com">info@example.com</a>
+            <li class="our-contacts-social-item">
+              <a href="" class="our-contacts-link-social link">
+                <svg class="our-contacts-icon-social" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <li class="our-contacts-social-item">
+              <a href="" class="our-contacts-link-social link">
+                <svg class="our-contacts-icon-social" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-contacts-social-item">
+              <a href="" class="our-contacts-link-social link">
+                <svg class="our-contacts-icon-social" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
