--- a/index.html
+++ b/index.html
@@ -315,29 +315,113 @@
           </ul>
         </div>
       </section>
+      <section class="clients">
+        <div class="container our-clients">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container footer-context">
-        <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
-        <address class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                href="https://goo.gl/maps/ePNzgXtJ5XjrzMhz8"
-                class="address-link link"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-mail link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="address-item">
-              <a class="address-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="our-address">
+          <a href="" class="logo link"><span class="logo-accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a
+                  href="https://goo.gl/maps/ePNzgXtJ5XjrzMhz8"
+                  class="address-link link"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-mail link" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="address-item">
+                <a class="address-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address> 
+        </div>
+       <div class="our-contacts">
+        <p class="our-contacts-title">приєднуйтесь</p>
+        <ul class="our-contacts-social list">
+          <li class="our-contacts-social-item">
+            <a href="" class="our-contacts-link-social link">
+              <svg class="our-contacts-icon-social" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-contacts-social-item">
+            <a href="" class="our-contacts-link-social link">
+              <svg class="our-contacts-icon-social" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-contacts-social-item">
+            <a href="" class="our-contacts-link-social link">
+              <svg class="our-contacts-icon-social" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-contacts-social-item">
+            <a href="" class="our-contacts-link-social link">
+              <svg class="our-contacts-icon-social" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+       </div>
       </div>
     </footer>
   </body>
